2002-09-06  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (BetterConversion): Special case for when we have
	a NullLiteral as the argument and we have to choose between string
	and object types - we choose string the way csc does.

	* attribute.cs (Attribute.Resolve): Catch the
	NullReferenceException and report error #182 since the Mono
	runtime no more has the bug and having this exception raised means
	we tried to select a constructor which takes an object and is
	passed a null.

2002-09-05  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (Invocation.OverloadResolve): Flag a nicer error
	message (1502, 1503) when we can't locate a method after overload
	resolution. This is much more informative and closes the bug
	Miguel reported.

	* interface.cs (PopulateMethod): Return if there are no argument
	types. Fixes a NullReferenceException bug.

	* attribute.cs (Attribute.Resolve): Ensure we allow TypeOf
	expressions too. Previously we were checking only in one place for
	positional arguments leaving out named arguments.

	* ecore.cs (ImplicitNumericConversion): Conversion from underlying
	type to the enum type is not allowed. Remove code corresponding to
	that.

	(ConvertNumericExplicit): Allow explicit conversions from
	the underlying type to enum type. This precisely follows the spec
	and closes a bug filed by Gonzalo.
	
2002-09-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* compiler.csproj:
	* compiler.csproj.user: patch from Adam Chester (achester@bigpond.com).

2002-09-03  Miguel de Icaza  <miguel@ximian.com>

	* statement.cs (SwitchLabel.ResolveAndReduce): In the string case,
	it was important that we stored the right value after the
	reduction in `converted'.

2002-09-04  Martin Baulig  <martin@gnome.org>

	* location.cs (Location.SymbolDocument): Use full pathnames for the
	source files.

2002-08-30  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (ComposedCast): Use DeclSparce.ResolveType instead